force-app/main/default/objects/Employees__c/fields/AssignedWards__c.field-meta.xml
<CustomField>
    <fullName>AssignedWards__c</fullName>
    <label>AssignedWards</label>
    <length>20</length>
    <type>Text</type>
</CustomField>