force-app/main/default/objects/Employees__c/fields/Nurse_Type__c.field-meta.xml
<CustomField>
    <fullName>Nurse_Type__c</fullName>
    <label>Nurse Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ICU</fullName>
                <default>true</default>
                <label>ICU</label>
            </value>
            <value>
                <fullName>Emergency</fullName>
            </value>
            <value>
                <fullName>Ward</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>