force-app/main/default/objects/Employees__c/fields/Qualification__c.field-meta.xml
<CustomField>
    <fullName>Qualification__c</fullName>
    <label>Qualification</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>10th</fullName>
            </value>
            <value>
                <fullName>12th</fullName>
                <default>true</default>
                <label>12th</label>
            </value>
            <value>
                <fullName>BDS</fullName>
            </value>
            <value>
                <fullName>BSc Nursing</fullName>
            </value>
            <value>
                <fullName>BTech</fullName>
            </value>
            <value>
                <fullName>Diploma</fullName>
            </value>
            <value>
                <fullName>DM</fullName>
            </value>
            <value>
                <fullName>GNM</fullName>
            </value>
            <value>
                <fullName>MBBS</fullName>
            </value>
            <value>
                <fullName>MCh</fullName>
            </value>
            <value>
                <fullName>MD</fullName>
            </value>
            <value>
                <fullName>MS</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>PhD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>