force-app/main/default/objects/Employees__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Doctor</fullName>
                <default>true</default>
                <label>Doctor</label>
            </value>
            <value>
                <fullName>Nurse</fullName>
            </value>
            <value>
                <fullName>Receptionist</fullName>
            </value>
            <value>
                <fullName>Ward Boy</fullName>
            </value>
            <value>
                <fullName>Security Guard</fullName>
            </value>
            <value>
                <fullName>Lab Technician</fullName>
            </value>
            <value>
                <fullName>Pharmacist</fullName>
            </value>
            <value>
                <fullName>Hospital Administrator</fullName>
            </value>
            <value>
                <fullName>Billing Executive</fullName>
            </value>
            <value>
                <fullName>Housekeeping Staff</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>