force-app/main/default/objects/Employees__c/fields/Year_of_Experience__c.field-meta.xml
<CustomField>
    <fullName>Year_of_Experience__c</fullName>
    <label>Year of Experience</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>