force-app/main/default/objects/Employees__c/recordTypes/Nurse.recordType-meta.xml
<RecordType>
    <fullName>Nurse</fullName>
    <active>true</active>
    <label>Nurse</label>
</RecordType>