force-app/main/default/objects/Employees__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Year_of_Experience__c</columns>
    <columns>Specialisation__c</columns>
    <columns>Role__c</columns>
    <columns>Salary__c</columns>
    <columns>Qualification__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Phone__c</columns>
    <columns>Department__c</columns>
    <columns>AssignedWards__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>